add Upnext and media query

--- a/clone_youtube/index.html
+++ b/clone_youtube/index.html
@@ -33,67 +33,129 @@
     <h2 class="hidden">동영상</h2>
     <video controls src="./video/video.mp4"></video>
   </section>
-  <!-- Video Info -->
-  <section class="video_info">
-    <h3 class="hidden">동영상정보</h3>
-    <!-- Meta data -->
-    <div class="metadata">
-      <ul class="hashtags">
-        <li>#Side Project</li>
-        <li>#Clone Youtube</li>
-        <li>#Cheer Up</li>
-      </ul>
-      <div class="title_and_btn">
-        <span class="vid_title clamp">
-          Clone Coding: Youtube Mobile WebSite 클론코딩 유튜브 모바일 웹사이트 Sementic Mark-up, flexbox CSS, JavaScript | 연습하기 좋은 유튜브 클론코딩 시멘틱의 의미, 간결한 CSS를 생각해보면서 해봐요.
-        </span>
-        <button class="vid_more_btn">
-          <i class="fas fa-caret-down"></i>
-        </button>
-      </div>
-      <span class="views">1M views 12 days aogo</span>
-    </div>
-    <!-- Action buttons -->
-    <ul class="actions">
-      <li>
-        <button>
-          <i class="fas fa-thumbs-up active"></i><span>1K</span>
-        </button>
-      </li>
-      <li>
-        <button>
-          <i class="fas fa-thumbs-down"></i><span>0</span>
-        </button>
-      </li>
-      <li>
-        <button>
-          <i class="fas fa-share"></i><span>공유</span>
-        </button>
-      </li>
-      <li>
-        <button>
-          <i class="fas fa-plus"></i><span>저장</span>
-        </button>
-      </li>
-      <li>
-        <button>
-          <i class="fab fa-font-awesome-flag"></i><span>신고</span>
-        </button>
-      </li>
-    </ul>
-    <!-- Channel description -->
-    <div class="channel">
-      <div class="channel_metadata">
-        <img src="./image/avatar.png" alt="저자">
-        <div class="channel_info">
-          <span class="channel_name">Jaehyeokk</span>
-          <span class="channel_subscribers">구독자 100만명</span>
+  <div class="videoinfo_and_upnext">
+    <!-- Video Info -->
+    <section class="video_info">
+      <h3 class="hidden">동영상 정보</h3>
+      <!-- Meta data -->
+      <div class="metadata">
+        <ul class="hashtags">
+          <li>#Side Project</li>
+          <li>#Clone Youtube</li>
+          <li>#Cheer Up</li>
+        </ul>
+        <div class="title_and_btn">
+          <span class="vid_title clamp">
+            Clone Coding: Youtube Mobile WebSite 클론코딩 유튜브 모바일 웹사이트 Sementic Mark-up, flexbox CSS, JavaScript | 연습하기 좋은 유튜브 클론코딩 시멘틱의 의미, 간결한 CSS를 생각해보면서 해봐요.
+          </span>
+          <button class="vid_more_btn">
+            <i class="fas fa-caret-down"></i>
+          </button>
         </div>
+        <span class="views">1M views 12 days aogo</span>
       </div>
-      <button class="subscribe">구독</button>
-    </div>
-  </section>
-  <!-- Up next -->
+      <!-- Action buttons -->
+      <ul class="actions">
+        <li>
+          <button>
+            <i class="fas fa-thumbs-up active"></i><span>1K</span>
+          </button>
+        </li>
+        <li>
+          <button>
+            <i class="fas fa-thumbs-down"></i><span>0</span>
+          </button>
+        </li>
+        <li>
+          <button>
+            <i class="fas fa-share"></i><span>공유</span>
+          </button>
+        </li>
+        <li>
+          <button>
+            <i class="fas fa-plus"></i><span>저장</span>
+          </button>
+        </li>
+        <li>
+          <button>
+            <i class="fab fa-font-awesome-flag"></i><span>신고</span>
+          </button>
+        </li>
+      </ul>
+      <!-- Channel description -->
+      <div class="channel">
+        <div class="channel_metadata">
+          <img src="./image/avatar.png" alt="저자">
+          <div class="channel_info">
+            <span class="channel_name">Jaehyeokk</span>
+            <span class="channel_subscribers">구독자 100만명</span>
+          </div>
+        </div>
+        <button class="subscribe">구독</button>
+      </div>
+    </section>
+    <!-- Up next -->
+    <section class="up_next">
+      <h2 class="up_next_title">다음 동영상</h2>
+      <ul>
+        <li class="item">
+          <div class="img"><img src="./image/thumbnail.png" alt="썸네일이미지"></div>
+          <div class="info">
+            <span class="title">Clone Coding: Youtube Mobile WebSite 클론코딩 유튜브 모바일 웹사이트 Sementic Mark-up, flexbox CSS, JavaScript | 연습하기 좋은 유튜브 클론코딩 시멘틱의 의미, 간결한 CSS를 생각해보면서 해봐요.</span>
+            <span class="channel">Jaehyeokk</span>
+            <span class="views">조회수 100만회</span>
+          </div>
+          <button class="more_btn">
+            <i class="fas fa-ellipsis-v"></i>
+          </button>
+        </li>
+        <li class="item">
+          <div class="img"><img src="./image/thumbnail.png" alt="썸네일이미지"></div>
+          <div class="info">
+            <span class="title">Clone Coding: Youtube Mobile WebSite 클론코딩 유튜브 모바일 웹사이트 Sementic Mark-up, flexbox CSS, JavaScript | 연습하기 좋은 유튜브 클론코딩 시멘틱의 의미, 간결한 CSS를 생각해보면서 해봐요.</span>
+            <span class="channel">Jaehyeokk</span>
+            <span class="views">조회수 100만회</span>
+          </div>
+          <button class="more_btn">
+            <i class="fas fa-ellipsis-v"></i>
+          </button>
+        </li>
+        <li class="item">
+          <div class="img"><img src="./image/thumbnail.png" alt="썸네일이미지"></div>
+          <div class="info">
+            <span class="title">Clone Coding: Youtube Mobile WebSite 클론코딩 유튜브 모바일 웹사이트 Sementic Mark-up, flexbox CSS, JavaScript | 연습하기 좋은 유튜브 클론코딩 시멘틱의 의미, 간결한 CSS를 생각해보면서 해봐요.</span>
+            <span class="channel">Jaehyeokk</span>
+            <span class="views">조회수 100만회</span>
+          </div>
+          <button class="more_btn">
+            <i class="fas fa-ellipsis-v"></i>
+          </button>
+        </li>
+        <li class="item">
+          <div class="img"><img src="./image/thumbnail.png" alt="썸네일이미지"></div>
+          <div class="info">
+            <span class="title">Clone Coding: Youtube Mobile WebSite 클론코딩 유튜브 모바일 웹사이트 Sementic Mark-up, flexbox CSS, JavaScript | 연습하기 좋은 유튜브 클론코딩 시멘틱의 의미, 간결한 CSS를 생각해보면서 해봐요.</span>
+            <span class="channel">Jaehyeokk</span>
+            <span class="views">조회수 100만회</span>
+          </div>
+          <button class="more_btn">
+            <i class="fas fa-ellipsis-v"></i>
+          </button>
+        </li>
+        <li class="item">
+          <div class="img"><img src="./image/thumbnail.png" alt="썸네일이미지"></div>
+          <div class="info">
+            <span class="title">Clone Coding: Youtube Mobile WebSite 클론코딩 유튜브 모바일 웹사이트 Sementic Mark-up, flexbox CSS, JavaScript | 연습하기 좋은 유튜브 클론코딩 시멘틱의 의미, 간결한 CSS를 생각해보면서 해봐요.</span>
+            <span class="channel">Jaehyeokk</span>
+            <span class="views">조회수 100만회</span>
+          </div>
+          <button class="more_btn">
+            <i class="fas fa-ellipsis-v"></i>
+          </button>
+        </li>
+      </ul>
+    </section>
+  </div>
 
 
 </body>
